[tool.poetry]
name = "harvey_tablo"
version = "0.0.1"
description = "Simplified dashboard for prod model performance tracking"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "harvey_tablo"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"